YAML_FILES = \
	entities/blaze.yaml \
	entities/cavespider.yaml \
	entities/creeper.yaml \
	entities/cow.yaml \
	entities/donkey.yaml \
	entities/spider.yaml \
	pack_manifest.yaml

MCPACK_FILES = \
	$(YAML_FILES) \
	pack_icon.png

EXTRA_DIST=
CLEANFILES=
noinst_DATA=
include $(top_srcdir)/am/mcpack.am
include $(top_srcdir)/am/yaml.am
